objects/Assessment__c.object
<CustomObject><fields>
        <fullName>Anon_Check__c</fullName>
        <formula>If ( OR (  ISPICKVAL ( Assessment_Type__c , "Presentation"), ISPICKVAL ( Assessment_Type__c , "Practical"), ISPICKVAL ( Assessment_Type__c , "Dissertation")), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Signifies that Anonymous Ref should be passed to markers in place of Student names</inlineHelpText>
        <label>Anon Check</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Assessment_Category__c</fullName>
        <description>Values dependent on selected Assessment Type value</description>
        <inlineHelpText>Specific Assessment Category</inlineHelpText>
        <label>Assessment Category</label>
        <picklist>
            <controllingField>Assessment_Type__c</controllingField>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Reflection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissertation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Examination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logical Framework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Reflection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systematic Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Assessment_Period__c</fullName>
        <formula>TEXT(Module__r.Assessment_Period__c)</formula>
        <inlineHelpText>Semester and Block in which Assessment falls. Set at Module level.</inlineHelpText>
        <label>Assessment Period</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Assessment_Type__c</fullName>
        <label>Assessment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Examination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissertation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Criticality_Score__c</fullName>
        <description>Hidden field to allow rollup of Pass Critical info at Assessment level to Module</description>
        <formula>If ( TEXT (Pass_Critical__c) = "Pool Pass", 1, 
   If ( TEXT (Pass_Critical__c) = "Mandatory", 100,
   0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criticality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Marking_Cohort__c</fullName>
        <formula>IF ( ISPICKVAL( Marking_Type__c , "Double Marked"),
   IF ( Anon_Check__c = True,
      HYPERLINK("00O20000007D1Ak?pv0="&amp;Id,"Double Marked Anonymous"),
      HYPERLINK("00O20000007D1Al?pv0="&amp;Id,"Double Marked Named")
   ),
   IF ( ISPICKVAL( Marking_Type__c , "Moderated"),
      IF ( Anon_Check__c = True,
         HYPERLINK("00O20000007D1Am?pv0="&amp;Id,"Moderated Anonymous"),
         HYPERLINK("00O20000007D1An?pv0="&amp;Id,"Moderated Named")
      ),
   "Error")
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links to report showing cohort sitting the assessment - if shows Error then remember to set Marking Type</inlineHelpText>
        <label>Mark Sheet</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Marking_Type__c</fullName>
        <label>Marking Type</label>
        <picklist>
            <picklistValues>
                <fullName>Moderated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Marked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Module_Reference__c</fullName>
        <formula>Module__r.Module_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Reference</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Pass_Critical__c</fullName>
        <inlineHelpText>Defines if this assessment needs to be passed for overall Module to be a pass. Pool Pass indicates this assessments is one of a Pool of assessments that have an individual threshold to reach per Module; Mandatory means this assessment must be passed.</inlineHelpText>
        <label>Pass Critical?</label>
        <picklist>
            <picklistValues>
                <fullName>Mean</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pool Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Assessment testing but exclusion from live reports etc</inlineHelpText>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <description>Might not be needed</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Weighting_Variable__c</fullName>
        <label>Weighting Variable</label>
        <picklist>
            <picklistValues>
                <fullName>Variable 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Weighting_percent__c</fullName>
        <formula>If (Text ( Weighting_Variable__c ) = "Variable 1",  Module__r.Assessment_Variable_1__c ,
If (Text ( Weighting_Variable__c ) = "Variable 2",  Module__r.Assessment_Variable_2__c ,
If (Text ( Weighting_Variable__c ) = "Variable 3",  Module__r.Assessment_Variable_3__c ,
If (Text ( Weighting_Variable__c ) = "Variable 4",  Module__r.Assessment_Variable_4__c ,
If (Text ( Weighting_Variable__c ) = "Variable 5",  Module__r.Assessment_Variable_5__c ,
If (Text ( Weighting_Variable__c ) = "Variable 6",  Module__r.Assessment_Variable_6__c ,
0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighting %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Assessment</label><nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Assessments</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Assessment_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Weighting_percent__c</columns>
        <columns>Weighting_Variable__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Assessments</label>
    </listViews></CustomObject>